--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
 }
 .container-fluid{
     width: 100%;
-    padding: 10px 20px;
+    margin: 10px 20px;
 }
 .container{
-    width: 100%;
-    padding: 10px 100px;
+    width: 88%;
+    margin: 10px 100px;
+    height: 400px;
 }
 /* Top Header start */
 .top-header{
@@ -108,29 +109,6 @@
     font-weight: 800;
     letter-spacing: 1.2px;
     width: 40%;
-    animation: mytitle 2s infinite;
-}
-@keyframes mytitle{
-    0%{
-        font-size: 10px;
-        color: #000;
-    }
-    30%{
-        font-size: 15px;
-        color: red;
-    }
-    60%{
-        font-size: 20px;
-        color: green;
-    }
-    90%{
-        font-size: 25px;
-        color: blue;
-    }
-    100%{
-        font-size: 30px;
-        color: tomato;
-    }
 }
 /* menu area start */
 nav{
@@ -190,4 +168,54 @@ nav ul li a:hover{
     100%{
         background-image: url('./img/slide1.jpg');
     }
+}
+.bg-dark{
+    background-color: #333!important;
+}
+/* Features section start */
+.our-features{
+    width: 100%;
+    height: 300px;
+}
+.our-features .card{
+    width: 28%;
+    text-align: center;
+    padding: 25px 10px;
+    float: left;
+    border:4px inset rgba(0,0,0,0.4);
+    margin:0px 5px;
+}
+.our-features .card i{
+    font-size: 45px;
+    color: #333;
+}
+.our-features .card .card-title{
+    font-size: 25px;
+    padding: 10px 0px;
+}
+.our-features .card .card-info{
+    text-align: justify;
+}
+.our-features .features{
+    width: 80%;
+    margin: auto;
+}
+
+/* director section start */
+.director{
+    text-align: center;
+}
+.director img{
+    height: 125px;
+    width: 125px;
+    margin: auto;
+    margin: 10px 0px;
+}
+.director-name, .director-qly{
+    padding: 5px 0px;
+}
+.director-about{
+    width: 60%;
+    padding: 5px 0px;
+    margin: auto;
 }
